Add Service Get / Update methods and document more routes for swagger
